force-app/main/default/objects/NES_ECA_Update__mdt.object
<CustomObject>
    <description>Referred in:
Created By : Jagadish Babu
Purpose :This metadata object is place holder to take the reference data in executing Final confirmation batch to update Enrollment component affiliation records to Not Applicable</description>
    <label>NES_ECA_Update</label>
    <pluralLabel>NES_ECA_Updates</pluralLabel>
</CustomObject>