force-app/main/default/objects/NES_ECA_Update__mdt/fields/Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program__c</fullName>
    <label>Academic Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>