force-app/main/default/objects/NES_ECA_Update__mdt/fields/Date_to_be_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Date_to_be_Updated_On__c</fullName>
    <label>Date to be Updated On</label>
    <required>true</required>
    <type>Date</type>
</CustomField>