force-app/main/default/objects/NES_ECA_Update__mdt/fields/Enrollment_Component__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Component__c</fullName>
    <label>Enrollment Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>