force-app/main/default/objects/NES_ECA_Update__mdt/fields/Grade_level__c.field-meta.xml
<CustomField>
    <fullName>Grade_level__c</fullName>
    <label>Grade level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>