force-app/main/default/objects/NES_ECA_Update__mdt/listViews/By_date.listView-meta.xml
<ListView>
    <fullName>By_date</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Date_to_be_Updated_On__c</columns>
    <columns>Academic_Program__c</columns>
    <columns>Enrollment_Component__c</columns>
    <columns>Grade_level__c</columns>
    <filterScope>Everything</filterScope>
    <label>By date</label>
</ListView>